--- a/pom.xml
+++ b/pom.xml
@@ -200,6 +200,14 @@
         </execution>
     </executions>
 </plugin>
+<plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-release-plugin</artifactId>
+        <version>3.0.0-M6</version>
+        <configuration>
+          <tagNameFormat>v@{1.0-SNAPSHOT}</tagNameFormat>
+        </configuration>
+      </plugin>
 </plugins>
 </pluginManagement>      
 </build>
