--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <artifactId>OPTIMIZE</artifactId>
         <groupId>org.tyss.optimize</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>0.1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
@@ -143,6 +143,12 @@
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
         </dependency>
+  <dependency>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>build-helper-maven-plugin</artifactId>
+        <version>3.2.0</version>
+        <type>maven-plugin</type>
+  </dependency>
 
     </dependencies>
 
@@ -205,7 +211,7 @@
         <artifactId>maven-release-plugin</artifactId>
         <version>3.0.0-M6</version>
         <configuration>
-          <tagNameFormat>v@{1.0-SNAPSHOT}</tagNameFormat>
+          <tagNameFormat>v@{0.1.0-SNAPSHOT}</tagNameFormat>
         </configuration>
       </plugin>
 </plugins>
