--- a/pom.xml
+++ b/pom.xml
@@ -75,6 +75,13 @@
 <!--            <version>2.4.3</version>-->
 <!--        </dependency>-->
 
+<dependency>
+  <groupId>org.apache.maven.plugins</groupId>
+  <artifactId>maven-release-plugin</artifactId>
+  <version>3.0.0-M6</version>
+  <type>maven-plugin</type>
+</dependency>
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
