--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>OPTIMIZE</artifactId>
         <groupId>com.testyantra.optimize</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.testyantra.optimize</groupId>
     <artifactId>tyss-common</artifactId>
+  <version>1.0</version>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -59,7 +58,8 @@
         <connection>scm:git:git://github.com/flinkoadmin/tyss-common.git</connection>
         <developerConnection>scm:git:ssh://github.com/flinkoadmin/tyss-common.git</developerConnection>
         <url>http://github.com/flinkoadmin/tyss-common/tree/main</url>
-    </scm>
+      <tag>@{0.1.0-SNAPSHOT}</tag>
+  </scm>
   
 
     <dependencies>
