--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
     <parent>
         <artifactId>OPTIMIZE</artifactId>
         <groupId>com.testyantra.optimize</groupId>
-        <version>1.0</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.testyantra.optimize</groupId>
     <artifactId>tyss-common</artifactId>
-  <version>1.0</version>
+  <version>1.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
