--- a/pom.xml
+++ b/pom.xml
@@ -211,7 +211,7 @@
      <artifactId>maven-release-plugin</artifactId>
      <version>2.5.3</version>
      <configuration>
-     <tagNameFormat>@{1.0-SNAPSHOT}</tagNameFormat>
+     <tagNameFormat>@v{project.version}</tagNameFormat>
      <checkModificationExcludes>
      <checkModificationExclude>pom.xml</checkModificationExclude>
      </checkModificationExcludes>
