--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
     <parent>
         <artifactId>OPTIMIZE</artifactId>
         <groupId>com.testyantra.optimize</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.testyantra.optimize</groupId>
     <artifactId>tyss-common</artifactId>
-  <version>1.0-SNAPSHOT</version>
+  <version>1.0</version>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
@@ -58,7 +58,7 @@
         <connection>scm:git:git://github.com/flinkoadmin/tyss-common.git</connection>
         <developerConnection>scm:git:ssh://github.com/flinkoadmin/tyss-common.git</developerConnection>
         <url>http://github.com/flinkoadmin/tyss-common/tree/main</url>
-      <tag>@{0.1.0-SNAPSHOT}</tag>
+      <tag>1.0</tag>
   </scm>
   
 
