--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
         <version>1.0</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.testyantra.tyss-common</groupId>
+    <groupId>com.testyantra.optimize</groupId>
     <artifactId>tyss-common</artifactId>
   <version>1.0</version>
 
