--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.testyantra.optimize</groupId>
-    <artifactId>tyss-common</artifactId>
+    <artifactId>OPTIMIZE</artifactId>
   <version>1.0</version>
 
     <properties>
