--- a/pom.xml
+++ b/pom.xml
@@ -4,12 +4,12 @@
         <artifactId>OPTIMIZE</artifactId>
         <groupId>com.testyantra.optimize</groupId>
         <relativePath>../tyss-common/pom.xml</relativePath>
-        <version>1.0</version>
+        <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.testyantra.optimize</groupId>
     <artifactId>tyss-common</artifactId>
-  <version>1.0</version>
+  <version>1.0-SNAPSHOT</version>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
