--- a/pom.xml
+++ b/pom.xml
@@ -1,68 +1,49 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <parent>
-        <artifactId>OPTIMIZE</artifactId>
-        <groupId>com.testyantra.optimize</groupId>
-        
-        <version>1.0-SNAPSHOT</version>
-    </parent>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-
+    <name>tyss-common</name>
+    <description>tyss-common module.</description>
+    <url>https://github.com/flinkoadmin/tyss-common.git</url>
     <groupId>com.testyantra.optimize</groupId>
     <artifactId>tyss-common</artifactId>
-  <version>1.0-SNAPSHOT</version>
-
+    <version>1.0-SNAPSHOT</version>
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
         <spring.data.mongodb.version>3.1.6</spring.data.mongodb.version>
 
     </properties>
-
-<distributionManagement>
-    <snapshotRepository>
-        <id>ossrh</id>
-        <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
-    </snapshotRepository>
-    <repository>
-        <id>ossrh</id>
-        <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-    </repository>
-</distributionManagement>  
-
-<name>flinko</name>
-    <description>
-        flinko tyss-common for end user
-    </description>
-  <url>https://github.com/flinkoadmin/tyss-nlp</url>
-  
-  
-  
-      <licenses>
+    <licenses>
         <license>
             <name>The Apache License, Version 2.0</name>
             <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
         </license>
     </licenses>
-  
-      <developers>
+    <developers>
         <developer>
             <name>Flinko Admin</name>
             <email>admin@flinko.com</email>
-            <organization>flinko</organization>
-            <organizationUrl>https://www.flinko.com</organizationUrl>
+            <organization>testyantra</organization>
+            <organizationUrl>https://www.testyantra.com</organizationUrl>
         </developer>
     </developers>
-  
-  
-      <scm>
-        <connection>scm:git:git://github.com/flinkoadmin/tyss-common.git</connection>
-        <developerConnection>scm:git:ssh://github.com/flinkoadmin/tyss-common.git</developerConnection>
-        <url>http://github.com/flinkoadmin/tyss-common/tree/main</url>
-      <tag>1.0</tag>
-  </scm>
-  
-
+    <scm>
+        <connection>scm:git:https://github.com/flinkoadmin/tyss-common.git</connection>
+        <developerConnection>scm:git:https://github.com/flinkoadmin/tyss-common.git</developerConnection>
+        <url>scm:git:https://github.com/flinkoadmin/tyss-common.git</url>
+    </scm>
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
     <dependencies>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -70,18 +51,11 @@
             <version>1.18.18</version>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-aop</artifactId>-->
-<!--            <version>2.4.3</version>-->
-<!--        </dependency>-->
-
-<dependency>
-  <groupId>org.apache.maven.plugins</groupId>
-  <artifactId>maven-release-plugin</artifactId>
-  <version>3.0.0-M6</version>
-  <type>maven-plugin</type>
-</dependency>
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework.boot</groupId>-->
+        <!--            <artifactId>spring-boot-starter-aop</artifactId>-->
+        <!--            <version>2.4.3</version>-->
+        <!--        </dependency>-->
 
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -91,16 +65,17 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
+            <version>2.13.2</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.data</groupId>
             <artifactId>spring-data-mongodb</artifactId>
             <version>${spring.data.mongodb.version}</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.springframework.boot</groupId>-->
-<!--            <artifactId>spring-boot-starter-validation</artifactId>-->
-<!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.springframework.boot</groupId>-->
+        <!--            <artifactId>spring-boot-starter-validation</artifactId>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
@@ -110,6 +85,7 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-devtools</artifactId>
+            <version>2.2.6.RELEASE</version>
             <optional>true</optional>
         </dependency>
 
@@ -133,6 +109,7 @@
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>bson</artifactId>
+            <version>3.11.2</version>
         </dependency>
 
         <dependency>
@@ -150,77 +127,66 @@
         <dependency>
             <groupId>redis.clients</groupId>
             <artifactId>jedis</artifactId>
+            <version>3.1.0</version>
         </dependency>
 
     </dependencies>
-<build>
-    <pluginManagement>
-      <plugins>
-<plugin>
-    <groupId>org.sonatype.plugins</groupId>
-    <artifactId>nexus-staging-maven-plugin</artifactId>
-    <version>1.6.7</version>
-    <extensions>true</extensions>
-    <configuration>
-        <serverId>ossrh</serverId>
-        <nexusUrl>https://oss.sonatype.org/</nexusUrl>
-        <autoReleaseAfterClose>true</autoReleaseAfterClose>
-    </configuration>
-</plugin> 
-<plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-source-plugin</artifactId>
-    <version>2.2.1</version>
-    <executions>
-        <execution>
-            <id>attach-sources</id>
-            <goals>
-                <goal>jar-no-fork</goal>
-            </goals>
-        </execution>
-    </executions>
-</plugin>
-<plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-javadoc-plugin</artifactId>
-    <version>2.9.1</version>
-    <executions>
-        <execution>
-            <id>attach-javadocs</id>
-            <goals>
-                <goal>jar</goal>
-            </goals>
-        </execution>
-    </executions>
-</plugin>
-<plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-gpg-plugin</artifactId>
-    <version>1.5</version>
-    <executions>
-        <execution>
-            <id>sign-artifacts</id>
-            <phase>verify</phase>
-            <goals>
-                <goal>sign</goal>
-            </goals>
-        </execution>
-    </executions>
-</plugin>
-<plugin>
-     <groupId>org.apache.maven.plugins</groupId>
-     <artifactId>maven-release-plugin</artifactId>
-     <version>2.5.3</version>
-     <configuration>
-     <tagNameFormat>@v{project.version}</tagNameFormat>
-     <checkModificationExcludes>
-     <checkModificationExclude>pom.xml</checkModificationExclude>
-     </checkModificationExcludes>
-     </configuration>
-</plugin>
-</plugins>
-</pluginManagement>      
-</build>
-
-
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+                <version>1.6.7</version>
+                <extensions>true</extensions>
+                <configuration>
+                    <serverId>ossrh</serverId>
+                    <nexusUrl>https://s01.oss.sonatype.org/</nexusUrl>
+                    <autoReleaseAfterClose>true</autoReleaseAfterClose>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-source-plugin</artifactId>
+                <version>2.2.1</version>
+                <executions>
+                    <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                            <goal>jar-no-fork</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>2.9.1</version>
+                <configuration>
+                    <source>8</source>
+                </configuration>
+                <executions>
+                    <execution>
+                        <id>attach-javadocs</id>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-gpg-plugin</artifactId>
+                <version>3.0.1</version>
+                <executions>
+                    <execution>
+                        <id>sign-artifacts</id>
+                        <phase>verify</phase>
+                        <goals>
+                            <goal>sign</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
